댓글 실제 구현중

--- a/src/main/resources/static/hello.html
+++ b/src/main/resources/static/hello.html
@@ -5,6 +5,48 @@
 <title>Insert title here</title>
 </head>
 <body>
-  <h2>Hell로 월드</h2>
+  <h2 style="color:red" data-id="4" data-commentid="없는 글자">Hell로 월드1</h2>
+  <h2 style="color:red" data-id="4" data-commentid="없는 글자">Hell로 월드2</h2>
+  <p>큰 글자를 클릭하면 배경색이 노란색이 됩니다</p>
+
+	<script>
+	//let color = '';
+	//const h2El = document.querySelector('h2')
+	
+// 	h2El.addEventListener('click',()=>{
+// 		alert(h2El.dataset.commentid);
+// 		console.log(h2El);
+// 		console.dir(h2El);		
+// 		    if (color) {
+//         document.body.style.backgroundColor = 'white';
+//     } else {
+//         document.body.style.backgroundColor = 'yellow';
+//     }
+// 		    color = !color;
+// 	})
+//===============================================================
+// 	const h2Els = document.getElementsByTagName('h2');
+// 	console.dir(h2Els[0]);
+// 	console.log(h2Els[0]);
+// 	for(let i = 0; i<h2Els.length; i++){
+// 		h2Els[i].addEventListener('click',()=>{
+// 			alert(h2Els[i].innerHTML);
+// 		})
+// 	}
+	const h2Els = document.querySelectorAll('h2');
+	//console.dir(h2Els[0]);
+	h2Els.forEach((h2Els,i)=>{
+		h2Els.onclick = function(){
+			const el = event.target;  // event.targe == this
+			console.dir(el);
+			//alert(el.innerHTML);
+			alert(this.innerHTML);   // this == 클릭한 h2
+			this.style.backgroundColor = 'yellow';
+			
+		}	
+	})
+	
+	</script>  
 </body>
+
 </html>
