로그인 체크중

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,8 @@
   <div>&nbsp;</div>
   <div><a href="/RestExam">Rest Api Get</a></div>  
   <div><a href="/apitest.html">API test</a></div>
+  <div>&nbsp;</div>
+  <div><a href="/thymeleaf/example">타임리프</a></div>
   <div>
     <form action="/RestExam" method="GET">      
        <input type="submit" value="GET" />
